# django_blog

./: README.md  env-template  pyproject.toml
.github/workflows/: sourcery.yml
core/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
core/migrations/: 0001_initial.py  0002_alter_category_options_alter_category_name.py  0003_post_image.py  0004_alter_post_image.py  0005_alter_post_image.py
core/templates/: blog_index.html  index.html  post_detail.html
core/templates/core/: blog_index.html  category.html  create_post.html  post_detail.html
django_blog/: settings.py  urls.py
templates/: base.html
